cleaning up code

--- a/templates/style.css
+++ b/templates/style.css
@@ -3,5 +3,6 @@ html{
 }
 
 header{
-    color: rebeccapurple
+    color: rebeccapurple;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
