--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
         <body>
             <label>Name:</label>
                 <br>
-            <input name="name" type="text" value="Input your user name" />
+            <input name="name" type="text" />
                 <br>
             <label>Password:</label>
                 <br>
@@ -17,5 +17,7 @@
             <label>Email:</label>
                 <br>
             <input name="email" type="email" />
+                <br>
+            <input name="submit" type="submit" value="Sign Up" />
         </body>
     </html>
