--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
             <h1>User Signup</h1>
         </header>
         <body>
+            <form method="post">
             <label>Name:</label>
                 <br>
             <input name="name" type="text" />
@@ -19,5 +20,6 @@
             <input name="email" type="email" />
                 <br>
             <input name="submit" type="submit" value="Sign Up" />
+            </form>
         </body>
     </html>
