--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,10 @@
                 <br>
             <input name="password" type="password" />
                 <br>
+            <label>Verify Password:</label>
+                <br>
+            <input name="passv" type="password" />
+                <br>
             <label>Email:</label>
                 <br>
             <input name="email" type="email" />
