--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,17 @@
 <html>
     <head>
         <style>
-            .error {
+            .error {{
                 color: red;
-            }
-            .table{
+            }}
+            .table{{
                 font-family: helvetica;
-            }
-            #headline{font-family: helvetica; 
+            }}
+            #headline{{font-family: helvetica; 
             color: green
-            }
+            }}
         </style>
     </head>
-
     <body>
         <h1 id="headline">User Signup</h1>
     <form method='POST'>
